# API-workshop02

./: .env.prod  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  testes.py
.github/workflows/: main.yml
app/: config.py  data.py  main.py  model.py  routes.py  schema.py
tests/: test_api.py
